@@ -1,15 +1,24 @@
 {
-  "timestamp" : "2024-04-24T00:59:10Z",
+  "timestamp" : "2024-04-24T16:15:48Z",
   "count_outdated" : 78,
   "uniques_outdated" : 61,
-  "count" : 79,
-  "uniques" : 62,
+  "count" : 81,
+  "uniques" : 63,
   "clones" : [
     {
       "timestamp": "2024-04-14T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-04-24T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
